--- a/config.toml
+++ b/config.toml
@@ -1,97 +1,82 @@
 baseURL = 'https://nejox.github.io/'
-languageCode = 'en'
-theme = "introduction"
-title = 'Jochen Schmidt'
+title = "Hi, I'm Jochen"
+theme = "gokarna"
+languageCode = "en"
+defaultContentLanguage = "en"
+enableEmoji = true
+enableRobotsTXT = true
+
+# Choose one of emacs, trac or perldoc
+pygmentsStyle = "monokai"
 
 [params]
-    themeStyle                   = "auto"                  # Choose "light" or "dark" or "auto"
-    favicon                      = "/img/fav.ico"          # Path to favicon file
-    showMenu                     = true                    # Show navigation menu
-    showRSSButton                = false                   # Show rss button in navigation
-    fadeIn                       = true                    # Turn on/off the fade-in effect
-    fadeInIndex                  = false                   # Turn on/off the fade-in effect on the index page even if fade-in was otherwise turned off
-    dateFormat                   = "Jan 2, 2006"
-    email                        = "schmidtjochen@gmx.net"   # E-mail address for contact section
-    # customCSS                  = ["foo.css"]             # Include custom css files placed under assets/
-    # customJS                   = ["foo.js"]              # Include custom JavaScript files placed under assets/
+  footer = ""
+  description = "AI Student  |  Computer Science  |  Software Engineer"
+  avatarURL = "/images/le_me.png"
+  AvatarAltText = "avatar"
+  avatarSize = "size-l"
+  accentColor = "#ffa64d"
 
-    # Configure the home page
-    [params.home]
-        introHeight              = "fullheight"            # Input either "medium" or "large" or "fullheight"
-        showLatest               = true                    # Show latest blog post summary
-        showAllPosts             = false                   # Set true to list all posts on home page, or set false to link to separate blog list page
-        allPostsArchiveFormat    = true                    # show all posts in an archive format
-        numberOfProjectsToShow   = 3                       # Maximum number of projects to show on home page. Unset or comment out to show all projects
-        localTime                = true                    # Show your current local time in contact section
-        timeZone                 = "Europe/Berlin"         # Your timezone as in the TZ* column of this list: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-        timeFormat               = "de-DE"                 # Language specific format to use
+
+  customHeadHTML = ""
+  
+  socialIcons = [
+    {name = "linkedin", url = "https://www.linkedin.com/in/jochen-schmidt96/"},
+    {name = "github", url = "https://github.com/nejox"},
+    {name = "kaggle", url = "https://www.kaggle.com/nejoxx"},
+    #{name = "stackoverflow", url = "https://example.com"},
+    {name = "instagram", url = "https://www.instagram.com/ne.jox/"},
+    {name = "email", url = "mailto:schmidtjochen@gmx.net"}
     
-     # Share buttons on blog post pages
-    [params.share]
-        twitter                  = true
-        facebook                 = true
-        pinterest                = true
 
-    [[params.social]]
-        url   = "https://linkedin.com/"
-        icon  = "linkedin-in" # icon name without the 'fa-'
-        icon_pack = "fab"
-    [[params.social]]
-        url = "mailto:youremail@email.com"  # For a direct email link, use "mailto:test@example.org".
-        icon = "paper-plane" # icon name without the 'fa-'
-        icon_pack = "fas"
+  ]
+  metaKeywords = ["blog", "gokarna", "hugo"]
 
-    # If you don't want to use the default menu, you can define one by yourself
-    # [[menu.main]]
-    #     name    = "Home"
-    #     url     = "/"
-    #     weight  = 0
-    # [[menu.main]]
-    #     name    = "Blog"
-    #     url     = "/blog/"
-    #     weight  = 1
+[menu]
+  #[[menu.main]]
+  #  name = "Home"
+  #  pre = "<span data-feather='home'></span>"
+  #  url = "/"
+  #  weight = 1
 
-# We only use tag as a taxonomies
-# You can add more by yourself
-[taxonomies]
-  tag = "tags"
-  series = "series"
+  #[[menu.main]]
+  #  name = "Posts"
+  #  pre = "<span data-feather='book'></span>"
+  #  url = "/posts/"
+  #  weight = 2
+
+  #[[menu.main]]
+  #  name = "Projects"
+  #  pre = "<span data-feather='code'></span>"
+  #  url = "/projects/"
+  #  weight = 3
+
+  #[[menu.main]]
+  #  name = "Tags"
+  #  pre = "<span data-feather='tag'></span>"
+  #  url = "/tags/"
+  #  weight = 4
+
+  #[[menu.main]]
+  #  identifier = "github"
+  #  pre = "<span data-feather='github'></span>"
+  #  url = "https://github.com/526avijitgupta/gokarna"
+  #  weight = 5
+
+  #[[menu.main]]
+  #  identifier = "buymeacoffee"
+  #  pre = "<span data-feather='coffee'></span>"
+  #  url = "https://www.buymeacoffee.com/avijitgupta"
+  #  weight = 6
+
+  #[[menu.main]]
+  #  identifier = "rss"
+  #  pre = "<span data-feather='rss'></span>"
+  #  url = "/index.xml"
+  #  weight = 7
 
 [markup]
-  defaultMarkdownHandler = "goldmark"
-  [markup.goldmark]
-  [markup.goldmark.renderer]
-    unsafe = true
-  [markup.highlight]
-    codeFences = true
-    guessSyntax = false
-    hl_Lines = ""
-    lineNoStart = 1
-    lineNos = false
-    lineNumbersInTable = true
-    # noClasses = true
-    # For styles, see https://xyproto.github.io/splash/docs/longer/all.html
-    style = "solarized-dark"
-    tabWidth = 4
-
-[languages]
-    [languages.en]
-        languageName     = "English"
-        languageCode     = "en-us"
-        contentDir       = "content/en"
-        weight           = 0
-        title            = "Introduction"
-        [languages.en.params]
-            description  = "Website Description"   # Max 160 characters show in search results
-            # footerText   = ""                      # Text to override default footer text (markdown allowed)
-
-    [languages.de]
-        languageName     = "Deutsch"
-        languageCode     = "de"
-        contentDir       = "content/de"
-        weight           = 2
-        title            = "Vorstellung"
-        [languages.de.params]
-            dateFormat   = "2. January 2006"
-            description  = "Beschreibung der Webseite"
-            # footerText   = ""
+  [markup.tableOfContents]
+    startLevel = 1
+    endLevel = 4
+    ordered = false
