--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,8 @@
 name: Deploy
-on: push
+on: 
+  push  
+    branches:
+      - dev
 
 
 jobs:
@@ -9,6 +12,9 @@ jobs:
         steps:
             - name: Git checkout
               uses: actions/checkout@v3
+              with:
+                submodules: true
+                fetch-depth: 1
               
             - name: Setup Hugo
               uses: peaceiris/actions-hugo@v2
