fixed action file

--- a/.github/workflows/check-links.yml
+++ b/.github/workflows/check-links.yml
@@ -5,6 +5,9 @@ on:
     workflows: ["Deploy"]
     types: [completed]
 
+env:
+  URL: https://nejox.github.io/
+
 jobs:
   check:
     runs-on: ubuntu-latest
