--- a/.github/workflows/check-links.yml
+++ b/.github/workflows/check-links.yml
@@ -7,11 +7,15 @@ on:
 
 env:
   URL: https://nejox.github.io/
+  CONFIG: hydra-config.json
+
 
 jobs:
   check:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
+      - name: Check out master to get config file
+        uses: actions/checkout@v3
       - name: Report broken links
         uses: victoriadrake/link-snitch@master
